--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -1,4 +1,3 @@
-
 body {
     overflow: hidden;
     background: #F5F5F5;
@@ -17,6 +16,10 @@ a:hover, a:focus {
     box-shadow: none;
 }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 .navbar {
     background: white;
     margin: 0 0 0 300px;
@@ -28,23 +31,23 @@ a:hover, a:focus {
     margin-left: -1.5rem;
 }
 
-.navbar-form input.form-control, .navbar-form button {
+.navbar-form input.form-control, .navbar-form .input-group-addon {
     border-radius: 0;
     height: 3.25rem;
-    margin: 0.25rem -5px 0 0;
+    position: relative;
+    top: 0.4rem;
 }
 
 .navbar-form input.form-control {
-    width: calc(100vw - 300px - 25rem);
+    width: calc(100vw - 300px - 40rem) !important;
 }
 
-.navbar-form button {
-    width: 3.5rem;
+.navbar-form .input-group-addon {
+    width: 3.5rem !important;
     font-size: 1.5rem;
     border: none;
     padding: 0;
-    background: #555 !important;
-    color: white !important;
+    margin: 0;
 }
 
 .navbar-btn {
@@ -140,10 +143,19 @@ main li:hover, main li:focus {
     background: #f1f1f1;
 }
 
-main li span {
+main .name {
+    width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+main .email {
     font-weight: normal;
     position: absolute;
-    left: 200px;
+    left: 220px;
+    top: 0;
+    line-height: 4rem;
 }
 
 main li button {
