Integration of front-end with back-end started, tests started.

--- a/front-end/app/views/modals/category-editor-modal.html
+++ b/front-end/app/views/modals/category-editor-modal.html
@@ -9,7 +9,7 @@
             <div class="modal-body">
                 <div class="form-group">
                     <label>Nome da categoria</label>
-                    <input type="text" class="form-control" placeholder="Nome da categoria" ng-value="data.name">
+                    <input type="text" class="form-control" placeholder="Nome da categoria" ng-model="data.name">
                 </div>
             </div>
             <div class="modal-footer">
