--- a/front-end/app/views/modals/contact-editor-modal.html
+++ b/front-end/app/views/modals/contact-editor-modal.html
@@ -9,15 +9,15 @@
             <form class="modal-body">
                 <div class="form-group">
                     <label>Nome completo</label>
-                    <input type="text" class="form-control" placeholder="Nome completo" ng-value="data.name">
+                    <input type="text" class="form-control" placeholder="Nome completo" ng-model="data.name">
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="text" class="form-control" placeholder="Email" ng-value="data.email">
+                    <input type="text" class="form-control" placeholder="Email" ng-model="data.email">
                 </div>
                 <div class="form-group">
                     <label>Telefone</label>
-                    <input type="text" class="form-control" placeholder="Telefone" ng-value="data.tel">
+                    <input type="text" class="form-control" placeholder="Telefone" ng-model="data.tel">
                 </div>
                 <div class="form-group">
                     <label>Categorias</label>
